--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Margaret:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+*{
+    font-family: 'Poppins';
+}
 
 .center{
     display: flex;
@@ -9,3 +16,6 @@
     justify-content: center;
 }
 
+.hero-text{
+    font-family: 'Margaret';
+}
